added reset logic

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,5 +19,8 @@
     <form action="{{ url_for('run_script_by_id', script_id='4') }}" method="post">
         <button type="submit">DOOMSCROLL</button>
     </form>
+    <form action="{{ url_for('stop_script') }}" method="post">
+        <button type="submit">RESET</button>
+    </form>
 </body>
 </html>
